=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - Load additional links in menu dynamically from news feed

 - Fixed an issue which caused rendering errors in the node list if the cluster
   contains multiple nodes with the same name
   note: changes the url to the detail view of single nodes

 - Added UTM tokens to links that link to the Crate.IO blog

 - Updated news feed URL

 - Label the master node in the cluster node list

2016/02/15 0.17.1
=================

 - Fix: updated BlenderPro webfont
   This fixes CSS glitches in Firefox 44 which misinterpreted height of webfont.

 - Fix: The recent update of the shard calculation for relocating shards caused
   problems with partitioned tables showing incorrect table health.

 - Fix: Reading an undefined property while cluster is offline caused
   Javascript error.

 - Fix: Rename cluster check indicator on statusbar to ``Checks``.

 - Improved display of recovery percentage in table view

 - Fix: relocating shards where previously displayed as "underreplicated" shards
   causing a yellow cluster state while relocating was in progress

 - Fix: change in calculation of recovery percentage broke calculations for
   partitioned tables causing table partitions not showing up

 - Fix: now also include unassigned shards (as 0% recovered) in calculation of
   recovery percentage which is displayed per table.
   Previously it could show '100% recovery done' even if there were still
   unassigned shards.

2015/12/15 0.17.0
=================

 - Display current shard recovery status on table info page. It shows the
   percentage of done recovery.

 - Updated calculation of underreplicated shards/records to work with the
   change in Crate server where shards in sys.shards table have a more fine
   granular state now and relocating shards are listed, too.

2015/12/15 0.16.2
=================
