@@ -29,6 +29,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-truncate-2/src/angular-truncate-2.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/plugins.js -->
