@@ -9,6 +9,7 @@
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
     "angular-truncate-2": "0.4.1",
+    "angular-sanitize": "~1.3.15",
     "json3": "~3.3.2",
     "jquery": "1.11.1",
     "jquery.cookie": "",
