@@ -5,6 +5,8 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Cluster check include now clickable links
+
  - Load additional links in menu dynamically from news feed
 
  - Fixed an issue which caused rendering errors in the node list if the cluster
